# curso-flask

./: README.md  pyproject.toml
database/: app.db  app.py
database/templates/: base.html  delete.html  login.html  nav.html  register.html  user.html  users.html
email/: app.py
email/templates/mail/: welcome.html
email_completo/app/: __init__.py  forms.py  models.py  routes.py
email_completo/app/auth/: views.py
email_completo/app/email/: __init__.py  views.py
email_completo/app/templates/: base.html  delete.html  users.html
forms/app/: routes.py
forms/app/templates/: nav.html  user.html  users.html
forms/app/templates/book/: user_add_book.html
gerenciamento_templates/: app.py  filtros.py
gerenciamento_templates/tema/: base.html  index.html  users.html
gerenciamento_templates/tema/componentes/: notificacao.html  user.html
introducao/: app.py
introducao/templates/: response.html
refatoracao/app/: __init__.py  models.py  routes.py
refatoracao/app/templates/: delete.html  login.html  users.html
refatoracao2/app/auth/: views.py
refatoracao2/app/book/: __init__.py  views.py
refatoracao2/app/templates/: login.html  nav.html  user.html
refatoracao2/app/templates/components/: notification.html
refatoracao2/app/user/: views.py
testes/app/: __init__.py  app.db  routes.py
testes/tests/: test_app.py
